src/noot/antlr/NootParser.java
// $ANTLR 3.5 /Users/Thijs/Development/noot/src/noot/antlr/Noot.g 2013-07-10 00:04:49

  package noot.antlr;
  import noot.ast.*;
  import noot.exceptions.LexerParserException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class NootParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "APOSTROPHE", "BECOMES", 
		"BOOL", "CHAR", "CHARACTER", "COMMA", "COMMENT", "CONST", "DEVIDE", "DIGIT", 
		"DO", "ELSE", "EQ", "FALSE", "FI", "IDENTIFIER", "IF", "INT", "LCURLY", 
		"LESS", "LESSEQ", "LETTER", "LOWER", "LPAREN", "MINUS", "MODULO", "MORE", 
		"MOREEQ", "MULTIPLY", "NEGATION", "NEQ", "NOOT", "NUMBER", "OD", "OR", 
		"PLUS", "PRINT", "RCURLY", "READ", "RPAREN", "SEMICOLON", "SYMBOL", "THEN", 
		"TRUE", "UPPER", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int APOSTROPHE=5;
	public static final int BECOMES=6;
	public static final int BOOL=7;
	public static final int CHAR=8;
	public static final int CHARACTER=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int CONST=12;
	public static final int DEVIDE=13;
	public static final int DIGIT=14;
	public static final int DO=15;
	public static final int ELSE=16;
	public static final int EQ=17;
	public static final int FALSE=18;
	public static final int FI=19;
	public static final int IDENTIFIER=20;
	public static final int IF=21;
	public static final int INT=22;
	public static final int LCURLY=23;
	public static final int LESS=24;
	public static final int LESSEQ=25;
	public static final int LETTER=26;
	public static final int LOWER=27;
	public static final int LPAREN=28;
	public static final int MINUS=29;
	public static final int MODULO=30;
	public static final int MORE=31;
	public static final int MOREEQ=32;
	public static final int MULTIPLY=33;
	public static final int NEGATION=34;
	public static final int NEQ=35;
	public static final int NOOT=36;
	public static final int NUMBER=37;
	public static final int OD=38;
	public static final int OR=39;
	public static final int PLUS=40;
	public static final int PRINT=41;
	public static final int RCURLY=42;
	public static final int READ=43;
	public static final int RPAREN=44;
	public static final int SEMICOLON=45;
	public static final int SYMBOL=46;
	public static final int THEN=47;
	public static final int TRUE=48;
	public static final int UPPER=49;
	public static final int WHILE=50;
	public static final int WS=51;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public NootParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public NootParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return NootParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/Thijs/Development/noot/src/noot/antlr/Noot.g"; }



	  @Override
	/*
	 * This method is overrided because Antlr
	 * does not have a convenient way to halt the program on 
	 * a recoverable Lexer or Parser error. We will use the
	 * LexerParserException which extends RuntimeException to
	 * halt the program without the adding a throws to the
	 * deleration.
	 */
	  public void reportError(RecognitionException e) {
	      throw new LexerParserException("Parsing error on line: " + e.line);
	  }


	public static class program_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:136:1: program : NOOT ^ ( command )+ EOF !;
	public final NootParser.program_return program() throws RecognitionException {
		NootParser.program_return retval = new NootParser.program_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token NOOT1=null;
		Token EOF3=null;
		ParserRuleReturnScope command2 =null;

		Node NOOT1_tree=null;
		Node EOF3_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:137:5: ( NOOT ^ ( command )+ EOF !)
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:137:7: NOOT ^ ( command )+ EOF !
			{
			root_0 = (Node)adaptor.nil();


			NOOT1=(Token)match(input,NOOT,FOLLOW_NOOT_in_program901); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			NOOT1_tree = (Node)adaptor.create(NOOT1);
			root_0 = (Node)adaptor.becomeRoot(NOOT1_tree, root_0);
			}

			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:137:13: ( command )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BOOL && LA1_0 <= CHARACTER)||LA1_0==CONST||LA1_0==FALSE||(LA1_0 >= IDENTIFIER && LA1_0 <= LCURLY)||(LA1_0 >= LPAREN && LA1_0 <= MINUS)||LA1_0==NEGATION||LA1_0==NUMBER||(LA1_0 >= PLUS && LA1_0 <= PRINT)||LA1_0==READ||LA1_0==TRUE||LA1_0==WHILE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:137:13: command
					{
					pushFollow(FOLLOW_command_in_program904);
					command2=command();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, command2.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_program907); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class command_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "command"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:140:1: command : ( declaration SEMICOLON !| expression SEMICOLON !);
	public final NootParser.command_return command() throws RecognitionException {
		NootParser.command_return retval = new NootParser.command_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token SEMICOLON5=null;
		Token SEMICOLON7=null;
		ParserRuleReturnScope declaration4 =null;
		ParserRuleReturnScope expression6 =null;

		Node SEMICOLON5_tree=null;
		Node SEMICOLON7_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:141:5: ( declaration SEMICOLON !| expression SEMICOLON !)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= BOOL && LA2_0 <= CHAR)||LA2_0==CONST||LA2_0==INT) ) {
				alt2=1;
			}
			else if ( (LA2_0==CHARACTER||LA2_0==FALSE||(LA2_0 >= IDENTIFIER && LA2_0 <= IF)||LA2_0==LCURLY||(LA2_0 >= LPAREN && LA2_0 <= MINUS)||LA2_0==NEGATION||LA2_0==NUMBER||(LA2_0 >= PLUS && LA2_0 <= PRINT)||LA2_0==READ||LA2_0==TRUE||LA2_0==WHILE) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:141:8: declaration SEMICOLON !
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_declaration_in_command930);
					declaration4=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration4.getTree());

					SEMICOLON5=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_command932); if (state.failed) return retval;
					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:142:8: expression SEMICOLON !
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_expression_in_command942);
					expression6=expression();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, expression6.getTree());

					SEMICOLON7=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_command944); if (state.failed) return retval;
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command"


	public static class declaration_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:145:1: declaration : ( CONST ! constant_declaration | variable_declaration );
	public final NootParser.declaration_return declaration() throws RecognitionException {
		NootParser.declaration_return retval = new NootParser.declaration_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token CONST8=null;
		ParserRuleReturnScope constant_declaration9 =null;
		ParserRuleReturnScope variable_declaration10 =null;

		Node CONST8_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:146:5: ( CONST ! constant_declaration | variable_declaration )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CONST) ) {
				alt3=1;
			}
			else if ( ((LA3_0 >= BOOL && LA3_0 <= CHAR)||LA3_0==INT) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:146:8: CONST ! constant_declaration
					{
					root_0 = (Node)adaptor.nil();


					CONST8=(Token)match(input,CONST,FOLLOW_CONST_in_declaration968); if (state.failed) return retval;
					pushFollow(FOLLOW_constant_declaration_in_declaration971);
					constant_declaration9=constant_declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, constant_declaration9.getTree());

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:147:8: variable_declaration
					{
					root_0 = (Node)adaptor.nil();


					pushFollow(FOLLOW_variable_declaration_in_declaration981);
					variable_declaration10=variable_declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, variable_declaration10.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class constant_declaration_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "constant_declaration"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:150:1: constant_declaration : ( INT ^| CHAR ^| BOOL ^) IDENTIFIER BECOMES ! primary_operand constant_declaration_extention ;
	public final NootParser.constant_declaration_return constant_declaration() throws RecognitionException {
		NootParser.constant_declaration_return retval = new NootParser.constant_declaration_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token INT11=null;
		Token CHAR12=null;
		Token BOOL13=null;
		Token IDENTIFIER14=null;
		Token BECOMES15=null;
		ParserRuleReturnScope primary_operand16 =null;
		ParserRuleReturnScope constant_declaration_extention17 =null;

		Node INT11_tree=null;
		Node CHAR12_tree=null;
		Node BOOL13_tree=null;
		Node IDENTIFIER14_tree=null;
		Node BECOMES15_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:5: ( ( INT ^| CHAR ^| BOOL ^) IDENTIFIER BECOMES ! primary_operand constant_declaration_extention )
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:8: ( INT ^| CHAR ^| BOOL ^) IDENTIFIER BECOMES ! primary_operand constant_declaration_extention
			{
			root_0 = (Node)adaptor.nil();


			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:8: ( INT ^| CHAR ^| BOOL ^)
			int alt4=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt4=1;
				}
				break;
			case CHAR:
				{
				alt4=2;
				}
				break;
			case BOOL:
				{
				alt4=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:9: INT ^
					{
					INT11=(Token)match(input,INT,FOLLOW_INT_in_constant_declaration1001); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					INT11_tree = new DeclarationNode(INT11) ;
					root_0 = (Node)adaptor.becomeRoot(INT11_tree, root_0);
					}

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:33: CHAR ^
					{
					CHAR12=(Token)match(input,CHAR,FOLLOW_CHAR_in_constant_declaration1009); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CHAR12_tree = new DeclarationNode(CHAR12) ;
					root_0 = (Node)adaptor.becomeRoot(CHAR12_tree, root_0);
					}

					}
					break;
				case 3 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:151:58: BOOL ^
					{
					BOOL13=(Token)match(input,BOOL,FOLLOW_BOOL_in_constant_declaration1017); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BOOL13_tree = new DeclarationNode(BOOL13) ;
					root_0 = (Node)adaptor.becomeRoot(BOOL13_tree, root_0);
					}

					}
					break;

			}

			IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_constant_declaration1024); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENTIFIER14_tree = new IdentifierNode(IDENTIFIER14) ;
			adaptor.addChild(root_0, IDENTIFIER14_tree);
			}

			BECOMES15=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_constant_declaration1029); if (state.failed) return retval;
			pushFollow(FOLLOW_primary_operand_in_constant_declaration1032);
			primary_operand16=primary_operand();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, primary_operand16.getTree());

			pushFollow(FOLLOW_constant_declaration_extention_in_constant_declaration1034);
			constant_declaration_extention17=constant_declaration_extention();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, constant_declaration_extention17.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant_declaration"


	public static class constant_declaration_extention_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "constant_declaration_extention"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:154:1: constant_declaration_extention : ( COMMA ^ IDENTIFIER BECOMES ! primary_operand constant_declaration_extention )? ;
	public final NootParser.constant_declaration_extention_return constant_declaration_extention() throws RecognitionException {
		NootParser.constant_declaration_extention_return retval = new NootParser.constant_declaration_extention_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token COMMA18=null;
		Token IDENTIFIER19=null;
		Token BECOMES20=null;
		ParserRuleReturnScope primary_operand21 =null;
		ParserRuleReturnScope constant_declaration_extention22 =null;

		Node COMMA18_tree=null;
		Node IDENTIFIER19_tree=null;
		Node BECOMES20_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:155:5: ( ( COMMA ^ IDENTIFIER BECOMES ! primary_operand constant_declaration_extention )? )
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:155:8: ( COMMA ^ IDENTIFIER BECOMES ! primary_operand constant_declaration_extention )?
			{
			root_0 = (Node)adaptor.nil();


			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:155:8: ( COMMA ^ IDENTIFIER BECOMES ! primary_operand constant_declaration_extention )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==COMMA) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:155:9: COMMA ^ IDENTIFIER BECOMES ! primary_operand constant_declaration_extention
					{
					COMMA18=(Token)match(input,COMMA,FOLLOW_COMMA_in_constant_declaration_extention1057); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					COMMA18_tree = new DeclarationNode(COMMA18) ;
					root_0 = (Node)adaptor.becomeRoot(COMMA18_tree, root_0);
					}

					IDENTIFIER19=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_constant_declaration_extention1063); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					IDENTIFIER19_tree = new IdentifierNode(IDENTIFIER19) ;
					adaptor.addChild(root_0, IDENTIFIER19_tree);
					}

					BECOMES20=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_constant_declaration_extention1068); if (state.failed) return retval;
					pushFollow(FOLLOW_primary_operand_in_constant_declaration_extention1071);
					primary_operand21=primary_operand();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, primary_operand21.getTree());

					pushFollow(FOLLOW_constant_declaration_extention_in_constant_declaration_extention1073);
					constant_declaration_extention22=constant_declaration_extention();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, constant_declaration_extention22.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant_declaration_extention"


	public static class variable_declaration_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};


	// $ANTLR start "variable_declaration"
	// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:158:1: variable_declaration : ( INT ^| CHAR ^| BOOL ^) IDENTIFIER variable_declaration_extention ;
	public final NootParser.variable_declaration_return variable_declaration() throws RecognitionException {
		NootParser.variable_declaration_return retval = new NootParser.variable_declaration_return();
		retval.start = input.LT(1);

		Node root_0 = null;

		Token INT23=null;
		Token CHAR24=null;
		Token BOOL25=null;
		Token IDENTIFIER26=null;
		ParserRuleReturnScope variable_declaration_extention27 =null;

		Node INT23_tree=null;
		Node CHAR24_tree=null;
		Node BOOL25_tree=null;
		Node IDENTIFIER26_tree=null;

		try {
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:5: ( ( INT ^| CHAR ^| BOOL ^) IDENTIFIER variable_declaration_extention )
			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:8: ( INT ^| CHAR ^| BOOL ^) IDENTIFIER variable_declaration_extention
			{
			root_0 = (Node)adaptor.nil();


			// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:8: ( INT ^| CHAR ^| BOOL ^)
			int alt6=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt6=1;
				}
				break;
			case CHAR:
				{
				alt6=2;
				}
				break;
			case BOOL:
				{
				alt6=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:9: INT ^
					{
					INT23=(Token)match(input,INT,FOLLOW_INT_in_variable_declaration1098); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					INT23_tree = new DeclarationNode(INT23) ;
					root_0 = (Node)adaptor.becomeRoot(INT23_tree, root_0);
					}

					}
					break;
				case 2 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:33: CHAR ^
					{
					CHAR24=(Token)match(input,CHAR,FOLLOW_CHAR_in_variable_declaration1106); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CHAR24_tree = new DeclarationNode(CHAR24) ;
					root_0 = (Node)adaptor.becomeRoot(CHAR24_tree, root_0);
					}

					}
					break;
				case 3 :
					// /Users/Thijs/Development/noot/src/noot/antlr/Noot.g:159:58: BOOL ^
					{
					BOOL25=(Token)match(input,BOOL,FOLLOW_BOOL_in_variable_declaration1114); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BOOL25_tree = new DeclarationNode(BOOL25) ;
					root_0 = (Node)adaptor.becomeRoot(BOOL25_tree, root_0);
					}

					}
					break;

			}

			IDENTIFIER26=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_variable_declaration1121); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			IDENTIFIER26_tree = new IdentifierNode(IDENTIFIER26) ;
			adaptor.addChild(root_0, IDENTIFIER26_tree);
			}

			pushFollow(FOLLOW_variable_declaration_extention_in_variable_declaration1126);
			variable_declaration_extention27=variable_declaration_extention();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, variable_declaration_extention27.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Node)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		 
		    catch (RecognitionException e) { 
		        throw e; 
		    } 

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variable_declaration"


	public static class variable_declaration_extention_return extends ParserRuleReturnScope {
		Node tree;
		@Override
		public Node getTree() { return tree; }
	};

